--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,6 @@ tensorflow
 transformers
 sentencepiece
 peft
-torch --index-url https://download.pytorch.org/whl/cu118
+# To install torch with gpu run
+# pip install -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cu118
+torch
